#15330 closed bug (fixed)
Haiku nightly fails to recognize BFS partition at boot
Reported by: | dpirate | Owned by: | waddlesplash |
---|---|---|---|
Priority: | blocker | Milestone: | R1/beta2 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | nielx | |
Blocked By: | Blocking: | #15195 | |
Platform: | All |
Description
Since some time in July, newer nightly updates of Haiku no longer boot on my Athlon II X2 system. Hrev53242 from July 11 works. The nighly from July 28 doesn't boot anymore. The machine is custom built. Has 3 SSDs for Linux (btrfs), Windows 10 and Haiku and also 1 HDD (ext4). No EFI and the partitioning scheme is MBR. The motherboard is an ASRock 890GM Pro 3. The boot messages (see attached screenshots) show that the kernel has problem with the BFS partition.
Attachments (4)
Change History (36)
by , 5 years ago
Attachment: | IMG_20190903_202049.jpg added |
---|
by , 5 years ago
Attachment: | haiku_boot_crash_x86_64_Athlon_II_8GbRAM_Radeon_6670_BIOS_MBR.jpg added |
---|
KDL window
comment:1 by , 5 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 5 years ago
This is the same as #15308.
Except that I get the error running as a VM in Parallels.
Nightly build 53121 works, but when trying to do a software update, I get the same boot partitions error that you receive with this SS...: "haiku_boot_crash_x86_64_Athlon_II_8GbRAM_Radeon_6670_BIOS_MBR.jpg"
...after rebooting.
comment:3 by , 5 years ago
It is most certainly not the same. The KDL message itself can have any number of causes. The cause in the case of this ticket is in the boot messages list: there is an invalid partion erroneously halting the boot. The case in your ticket is almost certainly the IDE bug. Equivalent panics do not always mean equivalent causes; this is a general catch all message.
comment:4 by , 5 years ago
[Now that Trac will let me in again... (:-))] Just to confirm --as I discussed on IRC a few days ago -- this also happens to me (hrev53416). My machine is a 4-proc Intel Core i3-2370M. Currently 5 active partitions, 2 Linux, 3 Haiku, booted with GRUB. No problems excpt the hrev543416 partition.
In addition I couldn't revert to any previous state via the Boot Menu. I could select a state, but then the 'Continue Booting' item was disabled. It was only enanbled if I selected the 'Current' state.
I finally restored the state manually, running from another partition, and things are normal again.
follow-up: 7 comment:5 by , 5 years ago
I can revert to the previous state through the Boot menu. I've been doing that once in a while to boot and do a SoftwareUpdater to see if an update fixes the problem.
comment:6 by , 5 years ago
Cc: | added |
---|
comment:7 by , 5 years ago
Replying to dpirate:
I can revert to the previous state through the Boot menu.
Huh. That's weird (as waddlesplash said on IRC). I definitely could not.
I had never actually tried to do that before, so I just checked with my working rev. It shows no problem. (I didn't actually revert, but the 'Continue Booting' menu item is now enabled as it should be.)
I wonder if it's peculiar to the machine, or maybe to the actual hrev we used (53416 in my case; you don't specifically say).
comment:8 by , 5 years ago
I don't know exactly which exact hrev breaks booting. I just boot into Haiku once in a while and fire up SoftwareUpdater. The next update I did (after Hrev53242 which works) some time at the end of July didn't boot anymore. I did 2 or 3 more updates in august and those didn't work either. But no problem selecting Hrev53242 from the bootloader for me. That's how I can actually update to give newer revisions a shot.
comment:9 by , 5 years ago
FTR, someone else reported on IRC last night that he had the same problem. (Sorry forgot the nick.) Pulkomandy responded, but it appears he hadn't seen the earlier reports or this ticket.
I hope this can be dealt with quickly, as it prevents those of us afflicted from keeping up-to-date!
follow-up: 11 comment:10 by , 5 years ago
FTR, someone else reported on IRC last night that he had the same problem. (Sorry forgot the nick.)
I just read the IRC logs from last night. The error message in question does not show up, so that appears to be completely unrelated.
I hope this can be dealt with quickly, as it prevents those of us afflicted from keeping up-to-date!
Uh, considering the commit in question that caused this was pushed in July and nobody noticed until multiple months later... it probably can wait another few days.
follow-up: 31 comment:11 by , 5 years ago
Replying to waddlesplash:
I just read the IRC logs from last night. The error message in question does not show up, so that appears to be completely unrelated.
Hmm. I guess his message was "Boot partition not found", and mine was "Get_boot_partition failed", so maybe not...
I hope this can be dealt with quickly, as it prevents those of us afflicted from keeping up-to-date!
Uh, considering the commit in question that caused this was pushed in July and nobody noticed until multiple months later... it probably can wait another few days.
Well, considering the time and effort it costs me to make an update, it's not surprising I don't try it often! (:-/) But it's not much use me reporting bugs I'ver found with my current latest until I know whether they're still around...
comment:15 by , 5 years ago
You shouldn't need to run any KDL commands, that should now happen automatically.
by , 5 years ago
Attachment: | Screen Shot 2019-09-17 at 3.56.03 PM.png added |
---|
Screenshot of KDL screen on boot up
comment:16 by , 5 years ago
Ah, sorry, I forgot that hrev was just slightly too old for the auto syslog print.
But I just realized your ticket was an issue in Parallels related to the IDE driver. This is totally unrelated to that. The panics are the same, the causes are not in the slightest.
comment:17 by , 5 years ago
In either case, it once worked and now does not. So, something broke and it's still broke.
Running hrev53121, it boots fine in Parallels 15 (or 14 for that matter). However, after running a software update with the software updater app and restart, I get the error shown in the screenshot I just posted.
So, somewhere, after hrev53121, a change was made that broke the boot process for Parallels.
follow-ups: 20 21 comment:18 by , 5 years ago
Just tested...Issue still exists in hrev53490.
How did you manage to get 53490? For me, the repository is still stuck on 53452! (I'm trying to download it directly. I don't want to spend an hour and a half upgrading (after also once again restoring the working hrev manually).)
And shouldn't I be able to open https://eu.hpkg.haiku-os.org/haiku/master/x86_gcc2/current" as a web page? It just shows message "NoSuchKeyThe specified key does not exist.master/x86_gcc2/currenthaiku-repositories/haiku-repositories/master/x86_gcc2/currentams315C55DEA6F582C941e311227-a283-45d4-a9fb-a3ac3ad51364"
I can open "https://eu.hpkg.haiku-os.org/haiku/", but it shows an apparent list of files of which the latest is 54352.
Would be nice to actually be able to test the fix!
follow-up: 22 comment:19 by , 5 years ago
codewrangler: As I have told you multiple times already, the issue is an intermittent one and the changes in that range probably inadvertently reintroduced it. Further, there is already a ticket tracking the error you are experiencing. So, why are you commenting here instead of in that one?
follow-up: 25 comment:20 by , 5 years ago
Replying to Pete:
And shouldn't I be able to open https://eu.hpkg.haiku-os.org/haiku/master/x86_gcc2/current" as a web page? It just shows message "NoSuchKeyThe specified key does not exist.master/x86_gcc2/currenthaiku-repositories/haiku-repositories/master/x86_gcc2/currentams315C55DEA6F582C941e311227-a283-45d4-a9fb-a3ac3ad51364"
We have moved the package archive to a new host due to disk usage constraints. It is a long term storage system which does not allow listing the pages.
You should be able to update just a subset of packages, however, I think "pkgman update haiku" or something like that should work, to update just the "haiku" package and its dependencies.
comment:21 by , 5 years ago
I started with hrev53121 and run software updater.
Replying to Pete:
Just tested...Issue still exists in hrev53490.
How did you manage to get 53490? For me, the repository is still stuck on 53452! (I'm trying to download it directly. I don't want to spend an hour and a half upgrading (after also once again restoring the working hrev manually).)
And shouldn't I be able to open https://eu.hpkg.haiku-os.org/haiku/master/x86_gcc2/current" as a web page? It just shows message "NoSuchKeyThe specified key does not exist.master/x86_gcc2/currenthaiku-repositories/haiku-repositories/master/x86_gcc2/currentams315C55DEA6F582C941e311227-a283-45d4-a9fb-a3ac3ad51364"
I can open "https://eu.hpkg.haiku-os.org/haiku/", but it shows an apparent list of files of which the latest is 54352.
Would be nice to actually be able to test the fix!
comment:22 by , 5 years ago
Replying to waddlesplash:
codewrangler: As I have told you multiple times already, the issue is an intermittent one and the changes in that range probably inadvertently reintroduced it. Further, there is already a ticket tracking the error you are experiencing. So, why are you commenting here instead of in that one?
I created a bug issue for this, under parallels. However, you closed it saying it was a duplicate of this issue.
Where should I comment on this issue?
Thanks!
Michael
follow-up: 24 comment:23 by , 5 years ago
codewrangler: Where do you see I closed it as a duplicate of this issue? I very clearly closed it as a duplicate of #4502, not this issue.
comment:24 by , 5 years ago
Replying to waddlesplash:
codewrangler: Where do you see I closed it as a duplicate of this issue? I very clearly closed it as a duplicate of #4502, not this issue.
Sorry, I thought that was what I was commenting on...just clicked the link...didn't notice the issue #...
comment:25 by , 5 years ago
Replying to pulkomandy:
We have moved the package archive to a new host due to disk usage constraints. It is a long term storage system which does not allow listing the pages.
But does that also mean I can't use wget, either? That was what i was tryi ng to do, but just getting '404'.
You should be able to update just a subset of packages, however, I think "pkgman update haiku" or something like that should work, to update just the "haiku" package and its dependencies.
Unfortunately, that's exactly what I can't conveniently do (:-/), as I can't boot the partition in its current state. I have to manually revert (again) to the working 53416 and, I guess, go through the whole update process again. Or is is possible that I can only update the kernel after reverting and have things work? Or, alternatively, just put the 53416 kernel package into the otherwise updated system, and have it boot?
comment:26 by , 5 years ago
That's what I'm saying, yes, the pkgman command should allow updating a single package with something like "pkgman update haiku" or some similar command line (not in front of an Haiku machine to check the exact command, sorry). This would update just the Haiku package which is only a few megabytes of download.
comment:27 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|---|
Priority: | normal → blocker |
comment:28 by , 5 years ago
I finally got some time to "pkgman update haiku" (-> hrev53511) and can verify that it is indeed fixed. Thanks!
comment:30 by , 5 years ago
Blocking: | 15195 added |
---|
comment:31 by , 5 years ago
Replying to Pete:
Replying to waddlesplash:
I just read the IRC logs from last night. The error message in question does not show up, so that appears to be completely unrelated.
Hmm. I guess his message was "Boot partition not found", and mine was "Get_boot_partition failed", so maybe not...
I hope this can be dealt with quickly, as it prevents those of us afflicted from keeping up-to-date!
Uh, considering the commit in question that caused this was pushed in July and nobody noticed until multiple months later... it probably can wait another few days.
Well, considering the time and effort it costs me to make an update, it's not surprising I don't try it often! (:-/) But it's not much use me reporting bugs I'ver found with my current latest until I know whether they're still around...
I have had the same problem of greyed out "continue boot" and with the same bug as reported here. I could update by booting to earlier revisions at first but after a certain number of updates (to see if the bug here and also I reported earlier but marked as duplicate #15159) I could not. This bug has been fixed "Panic get boot partitions failed" but I had to do a install from USB stick and overwrite the files already on the partition so I thought it migt be because of the Software Updater process because of the boot working when doing an install.
End of boot messages